# react-native-mail-engine

./: .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  SECURITY.md  ZERO-TO-DEPLOY.md  nitro.json  package-lock.json  package.json  react-native-mail-engine.podspec  tsconfig.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: android.yml  ci.yml  release.yml
android/: CMakeLists.txt  build.gradle  consumer-rules.pro
android/src/main/: AndroidManifest.xml
android/src/main/java/com/margelo/nitro/mailengine/: HybridMailAccount.kt  HybridMailEngine.kt  HybridMailMailbox.kt  MailBridge.kt
example/: App.tsx  app.json  package.json
ios/: HybridMailAccount.swift  HybridMailEngine.swift  HybridMailMailbox.swift  MailCoreObjCBridge.h  MailCoreObjCBridge.mm  MailEngineSupport.swift
plugin/: tsconfig.json
plugin/src/: index.ts
src/: index.ts  types.ts
src/specs/: MailAccount.nitro.ts  MailEngine.nitro.ts  MailMailbox.nitro.ts  MailTypes.nitro.ts
